--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,6 +84,7 @@ a {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 15.5px;
   line-height: 1.5;
+  background-color: #f4f4f3;
 }
 
 strong {
